WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
236321
[Playstation] Fix build break after
r289247
if ENABLE_SERVICE_WORKER is off
https://bugs.webkit.org/show_bug.cgi?id=236321
Summary
[Playstation] Fix build break after r289247 if ENABLE_SERVICE_WORKER is off
Jigen Zhou
Reported
2022-02-08 12:38:52 PST
After
r289247
, there are a number of build errors when ENABLE_SERVICE_WORKER is off: In file included from C:/work/webkit/jenkins/neko/Source/WebKit\NetworkProcess/SharedWorker/WebSharedWorkerServer.cpp:27: C:/work/webkit/jenkins/neko/Source/WebKit/NetworkProcess/SharedWorker/WebSharedWorkerServer.h:57:5: error: use of undeclared identifier 'PAL' PAL::SessionID sessionID(); ^ 1 error generated. In file included from WebKit/DerivedSources\WebSharedWorkerServerConnectionMessageReceiver.cpp:26: C:/work/webkit/jenkins/neko/Source/WebKit/NetworkProcess/SharedWorker\WebSharedWorkerServerConnection.h:55:5: error: unknown type name 'NetworkSession' NetworkSession* session(); ^ 1 error generated. In file included from WebKit/DerivedSources/unified-sources/UnifiedSource-54928a2b-18.cpp:4: C:/Working/neko_dir/neko/Source/WebKit\WebProcess/Storage/WebSharedWorkerContextManagerConnection.cpp:62:19: error: use of undeclared identifier 'standardUserAgent'; did you mean 'WebCore::standardUserAgent'? , m_userAgent(standardUserAgent()) ^~~~~~~~~~~~~~~~~ WebCore::standardUserAgent WebCore/PrivateHeaders\WebCore/UserAgent.h:41:23: note: 'WebCore::standardUserAgent' declared here WEBCORE_EXPORT String standardUserAgent(const String& applicationName = emptyString(), const String& applicationVersion = emptyString()); ^ 1 error generated. prospero-lld: error: undefined symbol: WebKit::WebProcessProxy::createForWorkers(WebKit::WebProcessProxy::WorkerType, WebKit::WebProcessPool&, WebCore::RegistrableDomain&&, WebKit::WebsiteDataStore&)
>>> referenced by WebProcessPool.cpp:639 (C:/Working/neko_dir/neko/Source/WebKit\UIProcess\WebProcessPool.cpp:639) >>> Source/WebKit/CMakeFiles/WebKit.dir/__/__/WebKit/DerivedSources/unified-sources/UnifiedSource-88d1702b-8.cpp.o:(WebKit::WebProcessPool::establishSharedWorkerContextConnectionToNetworkProcess(WebCore::RegistrableDomain&&, PAL::SessionID, WTF::CompletionHandler<void ()>&&))
ninja: build stopped: subcommand failed.
Attachments
Patch
(6.27 KB, patch)
2022-02-08 13:10 PST
,
Jigen Zhou
no flags
Details
Formatted Diff
Diff
Patch
(6.19 KB, patch)
2022-02-08 14:34 PST
,
Jigen Zhou
no flags
Details
Formatted Diff
Diff
Patch
(6.19 KB, patch)
2022-02-08 14:46 PST
,
Jigen Zhou
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Jigen Zhou
Comment 1
2022-02-08 13:10:42 PST
Created
attachment 451297
[details]
Patch
Jigen Zhou
Comment 2
2022-02-08 14:34:13 PST
Created
attachment 451304
[details]
Patch
Jigen Zhou
Comment 3
2022-02-08 14:46:18 PST
Created
attachment 451307
[details]
Patch
Jigen Zhou
Comment 4
2022-02-08 14:53:12 PST
Chris Dumez <
cdumez@apple.com
>
Chris Dumez
Comment 5
2022-02-08 14:54:22 PST
Comment on
attachment 451307
[details]
Patch r=me, sorry about the breakage.
Jigen Zhou
Comment 6
2022-02-08 15:09:15 PST
(In reply to Chris Dumez from
comment #5
)
> Comment on
attachment 451307
[details]
> Patch > > r=me, sorry about the breakage.
No problem, can you review the fix ?
Chris Dumez
Comment 7
2022-02-08 15:10:06 PST
(In reply to Jigen Zhou from
comment #6
)
> (In reply to Chris Dumez from
comment #5
) > > Comment on
attachment 451307
[details]
> > Patch > > > > r=me, sorry about the breakage. > > No problem, can you review the fix ?
I already did (thus r=me and r+ on your patch). I am just waiting for enough green bubbles to trigger the commit queue.
EWS
Comment 8
2022-02-08 16:36:35 PST
Committed
r289449
(
246993@main
): <
https://commits.webkit.org/246993@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 451307
[details]
.
Radar WebKit Bug Importer
Comment 9
2022-02-08 16:37:18 PST
<
rdar://problem/88659306
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug