[Playstation] Fix build break after r289247 if ENABLE_SERVICE_WORKER is off https://bugs.webkit.org/show_bug.cgi?id=236321

Patch by Jigen Zhou <jigen.zhou@sony.com> on 2022-02-08
Reviewed by Chris Dumez.

Unreviewed, build fix for playstation platform after r289247 for support of sharing Shared Workers.
This patch resolves compiling errors caused by unknow type name and undeclared identifiers,
and it also fixes linking error by making methods WebProcessProxy::createForWorkers and
WebProcessPool::userContentControllerIdentifierForWorkers() available when ENABLE_SERVICE_WORKER is off

* NetworkProcess/SharedWorker/WebSharedWorkerServer.h:
* NetworkProcess/SharedWorker/WebSharedWorkerServerConnection.h:
* UIProcess/WebProcessPool.cpp:
* UIProcess/WebProcessPool.h:
* UIProcess/WebProcessProxy.cpp:
* WebProcess/Storage/WebSharedWorkerContextManagerConnection.cpp:


Canonical link: https://commits.webkit.org/246993@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@289449 268f45cc-cd09-0410-ab3c-d52691b4dbfc