Source/WebKit/UIProcess/WebProcessProxy.cpp
@@ -182,7 +182,6 @@ Ref<WebProcessProxy> WebProcessProxy::create(WebProcessPool& processPool, Websit
     return proxy;
 }
 
-#if ENABLE(SERVICE_WORKER)
 Ref<WebProcessProxy> WebProcessProxy::createForWorkers(WorkerType workerType, WebProcessPool& processPool, RegistrableDomain&& registrableDomain, WebsiteDataStore& websiteDataStore)
 {
     auto proxy = adoptRef(*new WebProcessProxy(processPool, &websiteDataStore, IsPrewarmed::No, CrossOriginMode::Shared, CaptivePortalMode::Disabled));
@@ -191,7 +190,6 @@ Ref<WebProcessProxy> WebProcessProxy::createForWorkers(WorkerType workerType, We
     proxy->connect();
     return proxy;
 }
-#endif
 
 #if PLATFORM(COCOA) && ENABLE(MEDIA_STREAM)
 class UIProxyForCapture final : public UserMediaCaptureManagerProxy::ConnectionProxy {
